fix(style): Add spacing between the toc and the main body

--- a/src/components/layout/layout.module.css
+++ b/src/components/layout/layout.module.css
@@ -24,6 +24,10 @@
     & > *:has(pre) {
       max-width: calc(100vw - 2 * var(--container-padding-inline));
     }
+
+    & > * + main {
+      margin-block-start: var(--space-xl);
+    }
   }
 
   .header {
